--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3.7'
 services:
   web:
     build: .
+    image: 'wog_image'
     privileged: true
     user: root
     ports:
       - "5000:5000"
     container_name: WOG_Node
     environment:
-      -COMPOSE_PROJECT_NAME="WorldOfGames" 
+      - COMPOSE_PROJECT_NAME = "WorldOfGames" 
     volumes:
       - .:/"${COMPOSE_PROJECT_NAME}"
